# TAF-DataDev

./: .gitignore  README.md  README_EN.md  README_ZH.md
data-engine-api/: .gitignore  SWAGGER.md  env.example  main.py  pyproject.toml
data-engine-api/api/: README.md  __init__.py  database.py  editor.py
data-engine-api/models/: README.md  __init__.py  database.py  database_connection.py  directory.py  init_db.py  project.py
data-engine-web/: ARCHITECTURE.md  LAYOUT.md  package-lock.json  package.json
data-engine-web/app/: globals.css  layout.tsx
data-engine-web/app/(dashboard)/: layout.tsx
data-engine-web/app/(dashboard)/database/: page.tsx
data-engine-web/app/(dashboard)/editor/: page.tsx
data-engine-web/app/(dashboard)/home/: page.tsx
data-engine-web/components/database/: AddDatabaseModal.tsx  DatabaseList.tsx
data-engine-web/components/editor/: BottomPanel.tsx  CodeEditor.tsx  FilesPanel.tsx  IconBar.tsx  ProjectsList.tsx  RightSidebar.tsx
data-engine-web/components/layout/: TopBar.tsx
data-engine-web/components/metrics/: AddCategoryDialog.tsx  AddItemDialog.tsx  MetricsFilesPanel.tsx  MetricsList.tsx  MetricsToolbar.tsx
data-engine-web/components/ui/: ResizablePanel.tsx
data-engine-web/constants/: index.ts
data-engine-web/contexts/: DatabaseContext.tsx  EditorContext.tsx  MetricsContext.tsx  QueryResultContext.tsx  TableStructureContext.tsx
data-engine-web/data/: metrics.json
data-engine-web/hooks/: useEditor.ts
data-engine-web/lib/api/: database.ts  files.ts  metrics.ts
data-engine-web/types/: index.ts  metrics.ts
(+4 files in other folders)
